# Beerglas

./: .dockerignore  .gitignore  README.md  package.json  pnpm-lock.yaml  railway.json
.claude/: settings.json
.github/workflows/: node.yml  program.yml
docs/: spec.md  zapf-royale-v2.html
program/: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
program/programs/zapf-royale/: Cargo.toml
program/programs/zapf-royale/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
program/programs/zapf-royale/src/instructions/: cancel_lobby.rs  create_lobby.rs  fulfill_round.rs  initialize.rs  join_lobby.rs  mod.rs  set_fee.rs  settle_lobby.rs  submit_result.rs
program/tests/: zapf-royale.test.ts
server/: .dockerignore  .env.example  Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
server/src/: auth.ts  config.ts  index.ts  persistence.ts  server.ts  types.ts  ws.ts
server/src/chain/: anchorClient.ts  client.ts  idl.json
server/src/game/: constants.ts  fairness.ts  lobby.ts  pourSession.ts  simulation.ts
server/test/: auth.test.ts  fairness.test.ts  fee.test.ts  lobby.test.ts  simulation.test.ts  winners.test.ts
web/: .env.example  Dockerfile  README.md  next.config.mjs  package.json  railway.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/stats/: page.tsx
web/src/components/: Countdown.tsx  HowToPlay.tsx  LobbyCard.tsx  PlayerChips.tsx  ResultOverlay.tsx  TapScene.tsx  WalletProviders.tsx
web/src/hooks/: useGameSocket.ts
web/src/lib/: anchorClient.ts  api.ts  constants.ts  format.ts  idl.json
(+1 files in other folders)
